Fri Feb 20 15:08:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (has_magic): always get long path name on Windows even if
	  no tilde is there.  [ruby-core:68011] [Bug #10819]

	* dir.c (replace_real_basename): FindFirstFile ignore redirection
	  character, check if exists before call it.  cf. [Bug #8597]

Fri Feb 20 15:08:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): obtain real name with FindFirstFile API
	  instead of matchin all entries, on Windows.
	  [ruby-core:67954] [Bug #10819]

Fri Feb 20 14:32:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_initialize): workaround of opendir failure at symlink
	  directories on Windows via CIFS.

Thu Feb 19 17:05:47 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* class.c (rb_obj_singleton_methods): should use RTEST() to convert
	  VALUE to int.

Thu Feb 19 16:14:04 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* class.c (method_entry_i, class_instance_method_list,
	  rb_obj_singleton_methods): should not include methods of
	  superclasses if recur is false. [ruby-dev:48854] [Bug #10826]

Thu Feb 19 16:14:04 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (remove_method): When remove refined
	  method, raise a NameError if the method is not
	  defined in refined class.

	  But if the method is defined in refined class,
	  it should keep refined method and remove original
	  method.

	  Patch by Seiei Higa. [ruby-core:67722] [Bug #10765]

Thu Feb 19 16:07:03 2015  Seiei Higa  <hanachin@gmail.com>

	* proc.c (rb_obj_singleton_method): Kernel#singleton_method should
	  not use refinements, as well as Kernel#method.
	  [ruby-core:67603] [Bug #10744]

Thu Feb 19 15:32:26 2015  Dave Stevens  <dave@crowdlab.com>

	* string.c (str_make_independent_expand): terminate String when
	  moved from heap to embedded.  [Fix GH-821].

Thu Feb 19 13:35:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/sdbm/_sdbm.c: include ruby/ruby.h for PRIdPTRDIFF when a